--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,3 +36,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   taxi_rides:
+
+vars:
+  payment_type_values: [1,2,3,4,5]
+  
